--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="margin8">8dp</dimen>
     <dimen name="text12">12sp</dimen>
     <dimen name="text16">16sp</dimen>
+    <dimen name="text20">20sp</dimen>
     <dimen name="size1">1dp</dimen>
 </resources>
